--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="navbar">
-      <img src="assets/logo.efc6c435.svg" alt="" class="logo" />
+      <img src="./assets/logo.efc6c435.svg" alt="" class="logo" />
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="">Features</a></li>
@@ -53,7 +53,7 @@
       <a href="" class="started"
         >Get <i class="fa-solid fa-arrow-up"></i> Started</a
       >
-      <img src="/assets/robot.352cd501.png" alt="" class="robo-img" />
+      <img src="./assets/robot.352cd501.png" alt="" class="robo-img" />
     </div>
     <div class="page2">
       <div class="numbers">
@@ -116,7 +116,7 @@
 
 <div class="page3">
     <div class="control">
-        <img src="assets/bill.fd47dad8.png" alt="" / class="bill-img">
+        <img src="./assets/bill.fd47dad8.png" alt="" / class="bill-img">
         <div class="control-cont">
           <h1 class="bus-head">
             Easily control your billing & invoicing.
@@ -127,8 +127,8 @@
             </p>
           </h1>
           <div class="download">
-            <img src="assets/icons8-google-play-store-48.png" alt="">
-            <img src="assets/icons8-apple-logo-26.png" alt="">
+            <img src="./assets/icons8-google-play-store-48.png" alt="">
+            <img src="./assets/icons8-apple-logo-26.png" alt="">
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@
           <a href="" class="bus-start">Get Started</a>
         </div>
       </div>
-      <img src="assets/card.af071def.png" alt="" class="analysis">
+      <img src="./assets/card.af071def.png" alt="" class="analysis">
 
     </div>
 
@@ -169,7 +169,7 @@
              take you wherever you wish, but it will not replace you as the driver.
            </p>
            <div id="person-det">
-           <img src="assets/bmj9sgto_parag-agrawal-fired-as-twittr-ceo-afp-650_625x300_28_October_22.jpg" alt="" id="img-det1" class="img-det">
+           <img src="./assets/bmj9sgto_parag-agrawal-fired-as-twittr-ceo-afp-650_625x300_28_October_22.jpg" alt="" id="img-det1" class="img-det">
             <h1 class="person-det1">Parag Agarwal 
               <br><label for="" class="state">Founder & Leader</label></h1>
            </div>
@@ -179,7 +179,7 @@
             Money makes your life easier. If you're lucky to have it, you're lucky.
            </p>
            <div id="person-det">
-            <img src="assets/licensed-image.jpeg" alt="" id="img-det2" class="img-det">
+            <img src="./assets/licensed-image.jpeg" alt="" id="img-det2" class="img-det">
             <h1 class="person-det1">Satya Nadella 
               <br><label for="" class="state">Founder & Leader</label></h1>
            </div>
@@ -190,7 +190,7 @@
              money business, finance, and international trade that are really rich.
            </p>
            <div id="person-det" >
-            <img src="assets/Sundar_Pichai_02064_copy.avif" alt="" id="img-det3" class="img-det">
+            <img src="./assets/Sundar_Pichai_02064_copy.avif" alt="" id="img-det3" class="img-det">
             <h1 class="person-det1">Sundar Pichai 
               <br><label for="" class="state">Founder & Leader</label></h1>
 
@@ -200,10 +200,10 @@
       </div>
      <div class="page6">
       <div class="companies">
-     <img src="assets/airbnb.ac0ba47e.png" alt="" class="comp1">
-     <img src="assets/binance.ef218256.png" alt="" class="comp1">
-     <img src="assets/coinbase.fd06c89f.png" alt="" class="comp1">
-     <img src="assets/dropbox.fb49a0e9.png" alt="" class="comp1">
+     <img src="./assets/airbnb.ac0ba47e.png" alt="" class="comp1">
+     <img src="./assets/binance.ef218256.png" alt="" class="comp1">
+     <img src="./assets/coinbase.fd06c89f.png" alt="" class="comp1">
+     <img src="./assets/dropbox.fb49a0e9.png" alt="" class="comp1">
       </div>
 
     <div class="service">
@@ -218,7 +218,7 @@
     <div class="page7">
       <div class="footer">
         <div class="web-bar">
-          <img src="assets/logo.efc6c435.svg" alt="" class="web-logo">
+          <img src="./assets/logo.efc6c435.svg" alt="" class="web-logo">
           <h2 class="web-cont">A new way to make payments easy, reliable and secure.</h2>
         </div>
         <div class="importan">
